# servomotor

./: .gitignore  CHANGE_ANALYSIS.md  CLAUDE.md  LICENSE  Makefile  PRODUCTION_TEST_PROPOSAL.md  PRODUCT_DATA.yaml  README.md  SETTINGS_M23.py  SETTINGS_M3.py  SETTINGS_M4.py  STM32G030C8TX_FLASH.ld  WORK_CHECKLIST.md  Z_Axis.launch  Z_Axis_2.launch  bin2firmware  bin2firmware.c  build_script.sh  firmware_STM32G030_V12.ioc  generate_product_info.c  make  memory_layout.ld  memory_layout_no_bootloader.ld  move_unneeded_files_script_generator.py  objects.list  program.sh  update_main_c.md
API_documentation/: M17_servomotor_Arduino_API_documentation.md  M17_servomotor_Python_API_documentation.md  servomotor_api_documentation.md
Arduino_library/: .gitignore  AGENTS.md  ArduinoEmulator.cpp  ArduinoEmulator.h  AutoGeneratedUnitConversions.cpp  AutoGeneratedUnitConversions.h  Commands.h  Communication.cpp  Communication.h  DataTypes.cpp  DataTypes.h  LICENSE  Motor.cpp  Motor.h  PUBLISHING_GUIDE.md  README.md  README2.md  ServoMotor.cpp  ServoMotor.h  ServoMotorCommands.h  Servomotor.cpp  Servomotor.h  ServomotorCommands.cpp  Utils.cpp  Utils.h  build_tests.sh  copy_stuff_to_Arduino.sh  deploy_to_arduino_library.sh  example_multi_move.cpp  example_one_move.cpp  example_one_move_two_motors.cpp  example_trapezoid_move.cpp  generate_command_code.py  generate_unit_conversion_code.py  keywords.txt  library.properties  run_all_tests.sh  test_emergency_stop.cpp  test_enable_disable_mosfets.cpp  test_framework.cpp  (+10 more)
PCB/: .gitignore
Pictures/: Servomotor V1 pictures
QR_code/: README.md  reverse_qr_colors.py
Src/: ADC.c  LookupTableZ.h  PWM.c  RS485.c  RS485.h  commands.h  debug_uart.c  debug_uart.h  device_status.c  device_status.h  error_handling.c  error_handling.h  error_text.c  global_variables.c  global_variables.h  hall_sensor_calculations.c  hall_sensor_calculations.h  main.c  main.c.bak  microsecond_clock.c  mosfets.c  mosfets.h  motor_control.c  motor_control.h  product_info.c  product_info.h  settings.c  settings.h  startup_stm32g030c8tx.s  unique_id.c
Z_Axis/: firmware_STM32G030_V12.elf  firmware_STM32G030_V12.list  firmware_STM32G030_V12.map  makefile  objects.list
autogeneration/: .gitignore  AGENTS.md  BLDC_sin_lookup_table.py  README.md  autogenerate.py  autogenerate_unit_conversions.py  compute_hall_sensor_constants.py  generate_command_code.py  generate_command_code_new2.py  generate_unit_conversion_code.py  hall_calibration_one_rotation.txt
bed_heater/: Makefile
bootloader/: build_script.sh  build_script_old.sh  generate_product_info  generate_product_info.c  program.sh
bootloader_STM32G030/: STM32G030C8TX_FLASH.ld  build_script.sh
bootloader_STM32G031/: HARDWARE_VERSIONS  STM32G031G8UX_FLASH.ld  binary_diff.py  build_and_program.sh  build_script.sh  program.sh
c_test_programs/: .gitignore  ADC.c  Makefile  build_script.sh  debug_uart.c  error_handling.h  gpio.c  gpio.h  microsecond_clock_sim.c  motor_control_simulation.c  motor_hal.c  motor_hal.h  product_info.c  sanity_check_test_add_i96_log.py  servo_simulator.c  settings_sim.c  simulator_reset.c  (+14 more)
python_programs/PyPi_distribution/: LICENCE  README.md  prepare_src.sh  pyproject.toml
python_programs/PyPi_distribution/src/servomotor/: __init__.py  communication.py  serial_device.txt  serial_functions.py
python_programs/PyPi_distribution/src/servomotor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+1401 files in other folders)
