[project]
name = "servomotor"
version = "0.8.4"
authors = [
  { name="Tom Rodinger", email="tom@gearotons.com" },
]
description = "A Python package for controlling the easy to use 3-in-1 integrated servomotors from Gearotons"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENCE" }

[project.urls]
Homepage = "https://gearotons.com"
Issues = "https://tutorial.gearotons.com/feedback"

[project.scripts]
servomotor_command = "servomotor_command:main"
detect_and_set_alias_all_devices = "detect_and_set_alias_all_devices:main"
show_device_information_for_all_devices = "show_device_information_for_all_devices:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
py-modules = ["terminal_formatting", "servomotor_command", "detect_and_set_alias_all_devices", "show_device_information_for_all_devices"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["servomotor*"]

[tool.setuptools.package-data]
servomotor = ["*.json"]
